# EnPAC_2021_RD

./: CMakeLists.txt  Petri_Net.cpp  Petri_Net.h  README.md  RG.cpp  RG.h  main.cpp  product.cpp  product.h  rref.cpp  rref.h
BA/: Lexer.cpp  Lexer.h  Syntax_Tree.cpp  Syntax_Tree.h  VWAA.cpp  VWAA.h  atomic.cpp  atomic.h  buchi.cpp  buchi.h  set.h
